# corrente_escuro

./: README.md  resumo.ipynb
Amostras2022/Duas_exp/: 1380mesa02terra04V-0.1v.txt  1380mesa02terra04V-0.2v.txt  1380mesa02terra04V-1v.txt  1380mesa02terra04V-2v.txt  1380mesa02terra04V-3v.txt  1380mesa02terra04V-4v.txt  1380mesa02terra04V-5v.txt  1380mesa02terra04V0.1v.txt  1380mesa02terra04V0v.txt  1380mesa02terra04V1v.txt  1380mesa02terra04V2v.txt  1380mesa02terra04V3v.txt  1380mesa02terra04V4v.txt  1380mesa02terra04V5v.txt  1394mesa05terra07V-0.1v.txt  1394mesa05terra07V-0.2v.txt  1394mesa05terra07V-1v.txt  1394mesa05terra07V-2v.txt  1394mesa05terra07V-3v.txt  1394mesa05terra07V-4v.txt  1394mesa05terra07V-5v.txt  1394mesa05terra07V0.0v.txt  1394mesa05terra07V0.1v.txt  1394mesa05terra07V0.2v.txt  1394mesa05terra07V1v.txt  1394mesa05terra07V2v.txt  1394mesa05terra07V3v.txt  1394mesa05terra07V4v.txt  1394mesa05terra07V5v.txt  1395mesa03terra07V-0.1v.txt  1395mesa03terra07V-0.2v.txt  1395mesa03terra07V-1v.txt  1395mesa03terra07V-2v.txt  1395mesa03terra07V-3v.txt  1395mesa03terra07V-4v.txt  1395mesa03terra07V-5v.txt  1395mesa03terra07V0.0v.txt  1395mesa03terra07V0.1v.txt  1395mesa03terra07V0.2v.txt  1395mesa03terra07V1v.txt  (+4 more)
Duas_exp/Amostra1380_fitting/: LnsVsTMesa01Terra05_-0.10v.txt  LnsVsTMesa01Terra05_-0.20v.txt  LnsVsTMesa01Terra05_0.00v.txt  LnsVsTMesa01Terra05_0.10v.txt  LnsVsTMesa01Terra05_0.20v.txt  LnsVsTMesa02Terra04_-0.10v.txt  LnsVsTMesa02Terra04_-0.20v.txt  LnsVsTMesa02Terra04_0.00v.txt  LnsVsTMesa02Terra04_0.10v.txt  (+21 more)
IvsV/: pyproject.toml
(+419 files in other folders)
