[tool.poetry]
name = "ivsv"
version = "0.1.0"
description = ""
authors = ["luis <l_angel_1771@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
